Fragmentes del cuello y del PEcho, con la creacion de Estadisticas

--- a/app/src/main/res/layout/fragment_pecho.xml
+++ b/app/src/main/res/layout/fragment_pecho.xml
@@ -1,14 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PechoFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- imagen del ejercicio de cuello -->
+
+    <ImageView
+        android:id="@+id/imageViewPecho"
+        android:layout_width="247dp"
+        android:layout_height="213dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logo" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/textViewTemporizador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageViewPecho"
+        android:layout_centerHorizontal="true"
+        android:text="00:00"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"/>
 
-</FrameLayout>
+    <!-- iniciar el temporizador -->
+    <Button
+        android:id="@+id/buttonStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textViewTemporizador"
+        android:layout_centerHorizontal="true"
+        android:text="Start"
+        android:layout_marginTop="16dp"/>
+</RelativeLayout>
