--- a/app/src/main/res/layout/fragment_cuello3.xml
+++ b/app/src/main/res/layout/fragment_cuello3.xml
@@ -1,4 +1,3 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -6,7 +5,7 @@
     <!-- imagen del ejercicio de cuello -->
 
     <ImageView
-        android:id="@+id/imageViewCuello"
+        android:id="@+id/imageViewCuello3"
         android:layout_width="247dp"
         android:layout_height="213dp"
         android:layout_centerInParent="true"
@@ -18,7 +17,7 @@
         android:id="@+id/textViewTemporizador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageViewCuello"
+        android:layout_below="@id/imageViewCuello3"
         android:layout_centerHorizontal="true"
         android:text="00:00"
         android:textSize="24sp"
